# src/firecracker/src/api_server/request/snapshot.rs
@@ -115,6 +115,7 @@ fn parse_put_snapshot_load(body: &Body) -> Result<ParsedRequest, RequestError> {
         resume_vm: snapshot_config.resume_vm,
         network_overrides: snapshot_config.network_overrides,
         block_delta_dir: snapshot_config.block_delta_dir,
+        clock_realtime: snapshot_config.clock_realtime,
     };
 
     // Construct the `ParsedRequest` object.
@@ -201,6 +202,7 @@ mod tests {
             resume_vm: false,
             network_overrides: vec![],
             block_delta_dir: None,
+            clock_realtime: false,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
         assert!(
@@ -236,6 +238,7 @@ mod tests {
             resume_vm: false,
             network_overrides: vec![],
             block_delta_dir: None,
+            clock_realtime: false,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
         assert!(
@@ -271,6 +274,7 @@ mod tests {
             resume_vm: true,
             network_overrides: vec![],
             block_delta_dir: None,
+            clock_realtime: false,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
         assert!(
@@ -315,6 +319,7 @@ mod tests {
                 host_dev_name: String::from("vmtap2"),
             }],
             block_delta_dir: None,
+            clock_realtime: false,
         };
         let mut parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
         assert!(
@@ -347,6 +352,7 @@ mod tests {
             resume_vm: true,
             network_overrides: vec![],
             block_delta_dir: None,
+            clock_realtime: false,
         };
         let parsed_request = parse_put_snapshot(&Body::new(body), Some("load")).unwrap();
         assert_eq!(
